--- a/informap.html
+++ b/informap.html
@@ -220,11 +220,11 @@
             map.add(m1);
             map.add(m2);
 
-            m1.setLabel({
-                offset: new AMap.Pixel(-8, 32), //设置文本标注偏移量
-                content: lab1, //设置文本标注内容
-                direction: 'right' //设置文本标注方位
-            });
+//            m1.setLabel({
+//                offset: new AMap.Pixel(-8, 32), //设置文本标注偏移量
+//                content: lab1, //设置文本标注内容
+//                direction: 'right' //设置文本标注方位
+//            });
             m2.setLabel({
                 offset: new AMap.Pixel(-35, 10), //设置文本标注偏移量
                 content: '<div class="redlabel">'+lab2+'</div>', //设置文本标注内容
