fourth commit: 2 json files for map page

--- a/informap.html
+++ b/informap.html
@@ -340,7 +340,7 @@
 
         $(function() {
 
-            masterLink = './json/staff_info_explore.json';
+            masterLink = './json/staff_info_list.json';
             // var masterlink='http:servermainlink?vpsel=All%20VPs;
             loadMainPanel(masterLink);
         });
