six commit: drill-down from main page to map page

--- a/index.html
+++ b/index.html
@@ -33,11 +33,16 @@
             font-size: .8em;
         }
 
-        td {
+        tr {
             font-family: "Arial Narrow";
             font-size: .8em;
             padding-left: 0em;
             padding-right: 0em;
+        }
+        
+        tr:hover {
+            background-color: rgba(0, 0, 255, 0.2);
+            cursor: pointer;
         }
 
         .map-panel-gap {
