--- a/html/searchstaff.html
+++ b/html/searchstaff.html
@@ -54,11 +54,10 @@
 
         $('#searchbtn').click(function() {
             var mapPageLink = null;
-            mapPageLink = mapPageAPILink + '?keyfield1=staffid&keyvalue1=' + $("#inputid").val();
+            mapPageLink = mapPageAPILink + '?viewtype=searchStaff&viewvalue=' + $("#inputid").val();
             window.open(mapPageLink, "viewpage");
         });
     </script>
 
 
-</body>
-</html>
+</body></html>
