13th commit: fix some bugs of post json processing

--- a/html/informap.html
+++ b/html/informap.html
@@ -162,7 +162,7 @@
                 </div>
                 <div class="form-group">
                     <label for="closecontactNotes" class="notes">Notes</label>
-                    <textarea id="closecontactNotes" name="submitternotes" class="form-control note-field" rows="3" placeholder="Mandatory field if confirmed close contact case is identified, please provide more details, such as contact person name, where is he/she from, contact date, location & reasons, relationship etc."></textarea>
+                    <textarea id="closecontactNotes" name="submitternotes" class="form-control note-field" rows="3" placeholder="Mandatory field if confirmed close contact case is identified, please provide more details in the past 14 days, such as all contact person names in 14 days, where is he/she from, contact date, location & reasons, relationship etc."></textarea>
                 </div>
 
                 <div>
@@ -193,7 +193,7 @@
                 </div>
                 <div class="form-group">
                     <label for="hadcontactNotes" class="notes">Notes</label>
-                    <textarea id="hadcontactNotes" name="submitternotes" class="form-control note-field" rows="3" placeholder="Mandatory field if confirmed had contact case is identified, please provide more details, such as contact person name, where is he/she from, contact date, location & reasons, relationship etc."></textarea>
+                    <textarea id="hadcontactNotes" name="submitternotes" class="form-control note-field" rows="3" placeholder="Mandatory field if confirmed had contact case is identified, please provide more details in the past 14 days, such as call contact person names in 14 days, where is he/she from, contact date, location & reasons, relationship etc."></textarea>
                 </div>
 
                 <div>
