14th commit: access control feature added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 //            userjson = seesionStorage.getItem("curr_user");
         //  include userid in the userjson object, and assign value to userid and userrole.
             userid="u0002";
-            userrole="aao";
+            userrole=2;
             username="Brian Sun";
 
     });
