15th commit: support center added; monitor number on nav page; main dashboard drilldown control

--- a/html/navigation.html
+++ b/html/navigation.html
@@ -80,14 +80,14 @@
                      </a>
                      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                          <div class="bg-white py-2 collapse-inner rounded">
-                             <a id="myMonitoHI" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Health Issue" target="viewpage">Health Issue</a>
-                             <a id="myMonitoCC" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Close Contact" target="viewpage">Close Contact</a>
-                             <a id="myMonitoHC" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Had Contact" target="viewpage">Had Contact</a>
-                             <a id="myMonitoIHW" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Current in Hubei/Wenzhou" target="viewpage">Current in Hubei/Wenzhou</a>
-                             <a id="myMonitoBHW" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Been in Hubei/Wenzhou" target="viewpage">Been in Hubei/Wenzhou</a>
-                             <a id="myMonitoBAK" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Back from Hubei/Wenzhou" target="viewpage">Back from Hubei/Wenzhou</a>
-                             <a id="myMonitoST" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Staff Travel" target="viewpage">Staff Travel</a>
-                             <a id="myMonitoCR" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Close to Risky Location" target="viewpage">Close to Risky Location</a>
+                             <a id="myMonitoHI" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Health Issue" target="viewpage">Health Issue<span class="badge badge-primary badge-nav" id='monitorhealthcase'></span></a>
+                             <a id="myMonitoCC" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Close Contact" target="viewpage">Close Contact<span class="badge badge-primary badge-nav" id='monitorclosecontact'></span></a>
+                             <a id="myMonitoHC" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Had Contact" target="viewpage">Had Contact<span class="badge badge-primary badge-nav" id='monitorhadcontact'></span></a>
+                             <a id="myMonitoIHW" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Current in Hubei/Wenzhou" target="viewpage">Current in Hubei/Wenzhou<span class="badge badge-primary badge-nav" id='monitorcurinhubei'></span></a>
+                             <a id="myMonitoBHW" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Been in Hubei/Wenzhou" target="viewpage">Been in Hubei/Wenzhou<span class="badge badge-primary badge-nav" id='monitorbeenhubei'></span></a>
+                             <a id="myMonitoBAK" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Back from Hubei/Wenzhou" target="viewpage">Back from Hubei/Wenzhou<span class="badge badge-primary badge-nav" id='monitorbackhubei'></span></a>
+                             <a id="myMonitoST" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Staff Travel" target="viewpage">Staff Travel<span class="badge badge-primary badge-nav" id='monitorstafftravel'></span></a>
+                             <a id="myMonitoCR" class="collapse-item" href="informap.html?viewtype=myMonitor&viewvalue=Close to Risky Location" target="viewpage">Close to Risky Location<span class="badge badge-primary badge-nav" id='monitorclose2risky'></span></a>
                          </div>
                      </div>
                  </li>
@@ -140,9 +140,14 @@
                          </div>
                      </div>
                  </li>
+
+                 <li class="nav-item" id="supportCenter">
+                     <a class="nav-link" href="mysupport.html" target="viewpage">
+                         <i class="fas fa-fw fa-cog"></i>
+                         <span>My Support Center</span></a>
+                 </li>                 
                  <!-- Divider -->
                  <hr class="sidebar-divider d-md-block">
-
 
              </ul>
              <!-- End of Sidebar -->
