16th commit: fix a few bugs

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -58,7 +58,7 @@
                                         <h1><strong id="confirmedInfection"></strong></h1>
                                     </div>
                                     <div>
-                                        <p class="small kpi-label">Confirmed<br>Infection</p>
+                                        <p class="small kpi-label">Confirmed / Suspected nCoV</p>
                                     </div>
                                 </div>
                                 <div class="col-md-3 kpi" id='KPI2 UnderRisk'>
@@ -82,7 +82,7 @@
                                         <h1><strong id="underQuarantine"></strong></h1>
                                     </div>
                                     <div>
-                                        <p class="small kpi-label">Under<br>Quarantine</p>
+                                        <p class="small kpi-label">Close<br>Contact</p>
                                     </div>
                                 </div>
                             </div>
