--- a/html/searchstaff.html
+++ b/html/searchstaff.html
@@ -39,7 +39,7 @@
         <div class="input-group-prepend">
             <span class="input-group-text" id="inputGroup-sizing-sm">Search Staff</span>
         </div>
-        <input id="inputid" type="text" class="form-control" placeholder="input staff id" aria-describedby="inputGroup-sizing-sm">
+        <input id="inputid" type="text" class="form-control" placeholder="input 8-digit staff id" aria-describedby="inputGroup-sizing-sm">
         <button type="submit" id="searchbtn" class="col-md-2 btn-primary">submit</button>
     </div>
 
