--- a/html/informap.html
+++ b/html/informap.html
@@ -21,7 +21,7 @@
         <h3><strong id="infoPanelTitle">Staff Information Explorer</strong></h3>
         <h5 id="staffselnum"><strong>Staff Selected:</strong></h5>
 
-        <table class="table table-sm" id="staffListTbl" data-toggle="table" data-unique-id="caseid" data-height="170">
+        <table class="table table-sm" id="staffListTbl" data-toggle="table" data-unique-id="caseid" data-height="160">
             <thead class="thead-dark">
                 <tr>
                     <th data-field="casedate" data-width="10" data-width-unit="%" data-sortable="true">Date</th>
@@ -42,6 +42,7 @@
         </div>
         <div id="detailInfo">
             <h3 class="text-center"><strong id="nameTitle"></strong><span id="revokeMarker" class="small">Access Revoked</span></h3>
+            <p id='selfCaseReport' class="text-center"></p>
             <div style="float:left; width: 50%; margin-bottom: .6em;">
                 <h5 class="text-center"><strong>Personal Information</strong></h5>
                 <table class="table table-sm" id="basicInfo" data-toggle="table" data-show-header="false" data-height="260">
